# solana-arbitrage-bot

./: .gitignore  CLAUDE.md  Cargo.toml  Cargo.toml.bak  README.md  READY_TO_GO_LIVE.txt  build.rs  codacy-results.json  live_trading_log.txt  monitor_paper_trading.sh  rotate_logs.sh  target_addresses.txt  target_tokens.json  test_udp_listener.sh  test_udp_reception.sh  whitelisted_pools.json.backup
.claude/: HOW_TO_USE.md  context.md
.github/workflows/: README.md  codacy-analysis.yml  codacy-autofix.yml
arb-bot/: .env.example  Cargo.toml  Cargo.toml.grok_working  test_real_data.sh
arb-bot/src/: arbitrage_engine.rs  config.rs  dex_instruction_builder.rs  dex_registry.rs  dex_transaction_parser.rs  grpc_price_feed.rs  jupiter.rs  lib.rs  main.rs  metrics.rs  production_features.rs  protobuf_processor.rs  real_price_feed.rs  real_shredstream.rs  real_shredstream_client.rs  safety_systems.rs  secure_wallet.rs  shared_dex_parser.rs  shredstream_client.rs  shredstream_grpc_client.rs  shredstream_price_monitor.rs  shredstream_udp.rs
arb-bot/src/.ipynb_checkpoints/: arbitrage_engine-checkpoint.rs  main-checkpoint.rs
arb-bot/tests/: dex_registry_tests.rs  safety_tests.rs
clean_arb_bot/: .gitignore  .gitignore.local  Cargo.toml  GO_LIVE_CHECKLIST.md  LOGGING_STANDARDS.md  README.md.local  READY_TO_TRADE.md  RECOMMENDED_CONFIG.env  STATUS_2025_11_06.md  TEST_REPORT.md  TODO.md  build.rs  claw.md
clean_arb_bot/clean_arb_bot/docs/current/: CURRENT_STATUS_2025_10_07.md  JITO_GRPC_FINDINGS.md
clean_arb_bot/clean_arb_bot/production/: health_check.sh  start_arb_bot.sh  status_arb_bot.sh
clean_arb_bot/clean_arb_bot/src/: humidifi.rs  jito_grpc_client.rs  meteora_swap.rs  position_tracker.rs
clean_arb_bot/docs/current/: AUTONOMOUS_TRADING_ACTIVE.md  CURRENT_STATUS_2025_10_07.md  DEPLOYMENT_PLAN.md  DEX_IMPLEMENTATION_PLAN.md  GRPC_SUCCESS.md  LIVE_TRADING_GUIDE.md  MONITORING_GUIDE.md  PUMPSWAP_FIXED_2025_10_14.md  REALISTIC_FILTERS_COMPLETE.md  VOLUME_FILTER_FINDINGS.md
clean_arb_bot/production/: arb_bot_manager.sh  autonomous_monitor.sh  clean-arb-bot.service  health_check.sh  health_check_old.sh  status_arb_bot.sh  stop_arb_bot.sh  watchdog.sh
clean_arb_bot/scripts/: MONITOR_BOT.sh  benchmark_cycle6.sh  check_trading_status.sh  filter_impact.sh  go_live.sh  monitor_dashboard.sh  monitor_live_trades.sh  monitor_status.sh  run_with_jupiter.sh  start_live_monitoring.sh  start_live_trading.sh
clean_arb_bot/src/: arbitrage_engine.rs  cached_blockhash.rs  config.rs  cost_calculator.rs  dex_registry.rs  humidifi.rs  jito_bundle_client.rs  jito_grpc_client.rs  jito_submitter.rs  jito_tip_monitor.rs  jupiter_prices.rs  jupiter_triangle.rs  main.rs  meteora.rs  meteora_swap.rs  orca.rs  pool_population.rs  pool_registry.rs  position_tracker.rs  pumpswap.rs  raydium.rs  rpc_client.rs  shredstream_client.rs  simple_triangle_detector.rs  slippage.rs  swap_executor.rs  triangle_arbitrage.rs  types.rs
docs/current/: HUMIDIFI_ENABLED.md
production/: autonomous_monitor.sh  bot_control.sh  start_arb_bot.sh
scripts/: fetch_target_tokens.py  go_live.sh  monitor_dashboard_detailed.sh  monitor_live_trades.sh  populate_whitelisted_pools.py  quick_status.sh  trading_summary.sh
src/: arbitrage_engine.rs  cached_blockhash.rs  config.rs  jito_bundle_client.rs  jito_submitter.rs  main.rs  meteora.rs  orca.rs  pool_population.rs  pool_registry.rs  pumpswap.rs  raydium.rs  rpc_client.rs  shredstream_client.rs  simple_triangle_detector.rs  triangle_arbitrage.rs  types.rs
test_shreds_working/: Cargo.toml
test_shreds_working/src/: main.rs
