[package]
name = "arb_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared infrastructure for MEV/Arb bots
shared-bot-infrastructure = { path = "../../shared/shredstream-shared" }

# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# These are now provided by shared infrastructure
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# reqwest = { version = "0.11", features = ["json"] }
# futures = "0.3"
# solana-client = "1.18"
# solana-sdk = "1.18"
# uuid = { version = "1.0", features = ["v4"] }
# chrono = { version = "0.4", features = ["serde"] }

# Remove unnecessary dependencies that were causing build issues
# anchor-client = "0.29"
# base64 = "0.21"
# dashmap = "5.5"
# parking_lot = "0.12"
# crossbeam = "0.8"

[dev-dependencies]
tokio-test = "0.4"
