[package]
name = "clean_arb_bot"
version = "0.1.0"
edition = "2021"

[workspace]
# Standalone project

[dependencies]
# Core async runtime
tokio = { version = "1.21", features = ["rt-multi-thread", "macros", "time", "sync"] }
anyhow = "1.0"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
borsh = "0.10"  # For Meteora instruction serialization

# Time
chrono = "0.4.26"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Solana (older version, no conflicts)
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
solana-account-decoder = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.2"

# DEX SDKs for direct swap instruction building
# Meteora DLMM SDK (90% of opportunities - CRITICAL)
lb_clmm = { version = "0.1.1", features = ["cpi"] }

# Orca Whirlpools SDK (10% of opportunities)
# NOTE: Orca SDK v5.0 requires Solana 1.19+ (we're on 1.18)
# Version conflict: orca v5 uses spl-token-2022 v7 (zeroize 1.0) vs solana 1.18 (zeroize 1.3+)
# OPTIONS: 1) Upgrade Solana to 1.19+, 2) Build Orca instructions manually, 3) Skip Orca for now
# Decision: Will implement Meteora first (90% of opps), then decide on Orca approach

# Environment variables
dotenvy = "0.15"

# Random numbers
fastrand = "2.0"

# JITO bundle dependencies
uuid = { version = "1.0", features = ["v4", "serde"] }
bs58 = "0.5"
rand = "0.9.2"

# gRPC for JITO (75ms faster than HTTP!)
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
prost = "0.12"
prost-types = "0.12"

# CYCLE-6: Performance optimizations
rayon = "1.11.0"           # Parallel processing
tokio-retry = "0.3.0"      # Exponential backoff retry
dashmap = "5.5.0"          # Lock-free concurrent hashmap for price cache

# CYCLE-7: Production hardening (Grok recommendations)
rust_decimal = "1.36"      # Precise slippage calculations
governor = "0.7"           # Rate limiting

[build-dependencies]
tonic-build = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
