[package]
name = "test-shreds"
version = "0.1.0"
edition = "2021"

[workspace]
# Empty workspace to prevent being part of parent workspace

[dependencies]
bincode = "1.3.3"
chrono = "0.4.26"
dotenvy = "0.15"
futures = "0.3.24"
solana-stream-sdk = "0.5.1"
solana-entry = "=2.2.1"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
